--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -4,24 +4,29 @@ import menu from "@/config/menu.json";
 import { markdownify } from "@/lib/utils/textConverter";
 ---
 
-<footer class="section bg-dark">
-  <div class="container text-center">
-    {/* footer menu */}
-    <ul class="mb-8 space-x-4">
-      {
-        menu.footer.map((menu) => (
-          <li class="inline-block">
-            <a
-              href={menu.url}
-              class="p-4 text-white/75 hover:text-white transition-all"
-            >
-              {menu.name}
-            </a>
-          </li>
-        ))
-      }
-    </ul>
-    {/* copyright */}
-    <p set:html={markdownify(config.params.copyright)} class="text-white/75" />
+<footer class="site-footer section bg-dark">
+  <div class="container">
+    <div class="site-footer__top">
+      <div class="site-footer__brand">
+        <p class="site-footer__title">{config.site.logo_text}</p>
+        <p class="site-footer__subtitle">Long-term investing, simplified.</p>
+      </div>
+      <nav aria-label="Footer links">
+        <ul class="site-footer__menu">
+          {
+            menu.footer.map((item) => (
+              <li>
+                <a href={item.url} class="site-footer__link">
+                  {item.name}
+                </a>
+              </li>
+            ))
+          }
+        </ul>
+      </nav>
+    </div>
+    <div class="site-footer__bottom">
+      <p set:html={markdownify(config.params.copyright)} class="site-footer__copyright" />
+    </div>
   </div>
 </footer>
