feat(ui): redesign theme, navigation and update blog url structure
Refine visual identity with new color palette, Source Sans 3 font, and
updated typography rules. Restructure main navigation to highlight key
categories and redesign the About page layout. Update blog post routing
to use `/blog/` prefix and rename 'Global ETFs' category to 'Global
Investing'.

--- a/src/pages/authors/[single].astro
+++ b/src/pages/authors/[single].astro
@@ -55,7 +55,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
               <div class="col-12 sm:col-6 lg:col-4">
                 {post.data.image && (
                   <a
-                    href={`/${post.id}`}
+                    href={`/blog/${post.id}`}
                     class="rounded-lg block hover:text-primary overflow-hidden group"
                   >
                     <Image
@@ -92,7 +92,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
                 </ul>
                 <h3 class="h5">
                   <a
-                    href={`/${post.id}`}
+                    href={`/blog/${post.id}`}
                     class="block hover:text-primary transition duration-300"
                   >
                     {post.data.title}
