--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -19,7 +19,7 @@ const { main }: { main: NavigationLink[] } = menu;
 ---
 
 <header class="header">
-  <nav class="navbar navbar-wrapper">
+  <nav class="navbar navbar-wrapper" aria-label="Primary">
     <!-- logo -->
     <div class="order-0">
       <Logo />
@@ -30,6 +30,9 @@ const { main }: { main: NavigationLink[] } = menu;
       id="show-button"
       for="nav-toggle"
       class="order-2 flex cursor-pointer items-center text-dark md:order-2 md:hidden"
+      aria-label="Open menu"
+      aria-controls="primary-nav-menu"
+      tabindex="0"
     >
       <svg class="h-6 fill-current" viewBox="0 0 20 20">
         <title>Menu Open</title>
@@ -40,6 +43,9 @@ const { main }: { main: NavigationLink[] } = menu;
       id="hide-button"
       for="nav-toggle"
       class="order-2 hidden cursor-pointer items-center text-dark md:order-2"
+      aria-label="Close menu"
+      aria-controls="primary-nav-menu"
+      tabindex="0"
     >
       <svg class="h-6 fill-current" viewBox="0 0 20 20">
         <title>Menu Close</title>
@@ -51,7 +57,7 @@ const { main }: { main: NavigationLink[] } = menu;
     <!-- /navbar toggler -->
 
     <ul
-      id="nav-menu"
+      id="primary-nav-menu"
       class="navbar-nav order-3 hidden w-full md:order-1 md:flex md:w-auto md:absolute md:left-1/2 md:-translate-x-1/2"
     >
       {
