--- a/src/styles/safe.css
+++ b/src/styles/safe.css
@@ -7,7 +7,7 @@ input#nav-toggle:checked ~ label#hide-button {
   @apply flex md:hidden;
 }
 
-input#nav-toggle:checked ~ #nav-menu {
+input#nav-toggle:checked ~ #primary-nav-menu {
   @apply block md:flex;
 }
 
